# exocortex

./: .env.example  LICENSE  changelog.md  contributing.md  manage.py  pyproject.toml  readme.md
.github/: copilot-instructions.md
.github/workflows/: rag-eval.yml
admin/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
admin/apps/commitments/: __init__.py  apps.py  urls.py  utils.py  views.py
admin/apps/core/: __init__.py  admin.py  apps.py  context_processors.py  models.py  services.py  urls.py  utils.py  views.py
admin/apps/ingest/: __init__.py  apps.py  urls.py  views.py
admin/apps/integrations/: __init__.py  apps.py  urls.py  views.py
admin/apps/logs/: views.py
admin/static/: README.md
admin/templates/: base.html
config/: .editorconfig  Dockerfile  deploy.ps1  docker-compose.yml
exo/: __init__.py  __main__.py  config.py
exo/ai/: __init__.py  base.py  gemini.py
exo/api/: __init__.py  app.py  middleware.py  webhooks.py
exo/api/routes/: query.py  (+5 more)
exo/cli/: __init__.py  ingest.py  main.py  query.py
exo/db/: __init__.py  client.py  queries.py  types.py
exo/integrations/: __init__.py  langchain.py  n8n.py
exo/llmops/: __init__.py  evaluate.py  observe.py
exo/parsers/: __init__.py  base.py  factory.py  markdown.py  telegram.py  transcript.py
exo/pipeline/: __init__.py  embed.py  enrich.py  orchestrator.py  parse.py  query.py  store.py
exo/schemas/: __init__.py  content.py  enriched.py  errors.py  memory.py  query.py
scripts/: generate_openapi.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/rag/: __init__.py  golden_dataset.json  test_rag_evaluation.py
tests/unit/: __init__.py  test_ai.py  test_api.py  test_db.py  test_evaluate.py  test_n8n.py  test_observe.py  test_parsers.py  test_pipeline.py  test_schemas.py
(+29 files in other folders)
