[project]
name = "exo-brain"
version = "0.1.0"
description = "Executive OS - Personal Knowledge Memory System"
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Exo Team" }]
keywords = ["knowledge-management", "rag", "ai", "memory", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "supabase>=2.0",
    "google-generativeai>=0.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
cli = ["click>=8.0"]
api = ["fastapi>=0.115", "uvicorn>=0.32"]
langchain = ["langchain-core>=0.3"]
llmops = ["langfuse>=2.0", "deepeval>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]
all = [
    "exo-brain[cli]",
    "exo-brain[api]",
    "exo-brain[langchain]",
    "exo-brain[llmops]",
    "exo-brain[dev]",
]

[project.scripts]
exo = "exo.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
